hphp/hack/test/typecheck/new_inference/eager_solve/solve_nothing.php.like_types.exp
File "solve_nothing.php", line 26, characters 21-22:
Was expecting an array or collection but type is unknown (Typing[4297])
File "solve_nothing.php", line 26, characters 5-6:
It is unknown because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
File "solve_nothing.php", line 26, characters 27-28:
Was expecting an array or collection but type is unknown (Typing[4297])
File "solve_nothing.php", line 26, characters 5-6:
It is unknown because a type could not be determined here
File "solve_nothing.php", line 26, characters 33-34:
Was expecting an array or collection but type is unknown (Typing[4297])
File "solve_nothing.php", line 26, characters 5-6:
It is unknown because a type could not be determined here
File "solve_nothing.php", line 15, characters 18-21:
Invalid argument (Typing[4110])
File "solve_nothing.php", line 5, characters 19-20:
Expected Tv
File "solve_nothing.php", line 10, characters 23-24:
  via this generic Tv
File "solve_nothing.php", line 13, characters 27-28:
But got dynamic because it is an unenforceable type
